# randomness

./: Cargo.toml  LICENSE-MIT  README.md
benches/: external_rand_crate_benchmarks.rs  mersenne_twister_benchmarks.rs  middle_square_weyl_sequence_benchmarks.rs  random_benchmarks.rs  random_number_benchmarks.rs  xorshift_plus_benchmarks.rs  xoshiro_ss_benchmarks.rs
random_collections/: Cargo.toml
random_distributions/: Cargo.toml
random_distributions/src/: lib.rs
random_distributions/src/binomial_distribution/: mod.rs
random_distributions/src/uniform_distribution/: mod.rs
random_numbers/: Cargo.toml  README.md
random_numbers/benches/: mersenne_twister_benchmarks.rs  middle_square_weyl_sequence_benchmarks.rs  random_number_benchmarks.rs  xorshift_plus_benchmarks.rs
random_numbers/src/: lib.rs
random_numbers/src/mersenne_twister/: mod.rs
random_numbers/src/msws/: mod.rs
random_numbers/src/split_mix/: mod.rs
random_numbers/src/xorshift/: xorshift_plus.rs  xoshiro_256ss.rs
random_numbers/tests/: random_numbers_uniformity_tests.rs
src/: lib.rs  random.rs
src/mersenne_twister/: constants.rs  mod.rs
src/msws/: mod.rs
src/seeds/: mod.rs
src/split_mix/: constants.rs  mod.rs
src/xorshift/: mod.rs  xorshift_plus.rs  xoshiro.rs  xoshiro_256ss.rs
tests/: random_numbers_uniformity_tests.rs  random_struct_tests.rs
tests/uniform/: mod.rs
