[package]
name = "randomness"
version = "0.1.0"
authors = ["markjunod <mark.junod@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[workspace]
members = [
    "random_numbers",
    "random_collections",
    "random_distributions",
]

[dependencies]
random_numbers = { path = "random_numbers" }