[package]
name = "randomness"
version = "0.1.0"
authors = ["markjunod <mark.junod@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[workspace]
members = [
    "random_numbers",
    "random_collections",
    "random_distributions",
]

[dependencies]
random_collections = { path = "random_collections" }
random_distributions = { path = "random_distributions" }
random_numbers = { path = "random_numbers" }

[dev-dependencies]
criterion = "0.3.3"
rand = "0.7.3"

[[bench]]
name = "external_rand_crate_benchmarks"
harness = false

[[bench]]
name = "random_benchmarks"
harness = false