[package]
name = "random_collections"
version = "0.1.0"
authors = ["markjunod <mark.junod@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random_numbers = { path = "../random_numbers" }
