[package]
name = "random_numbers"
version = "0.1.0"
authors = ["markjunod <mark.junod@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.3"
rand = "0.7.3"

[[bench]]
name = "random_number_benchmarks"
harness = false

[[bench]]
name = "mersenne_twister_benchmarks"
harness = false

[[bench]]
name = "middle_square_weyl_sequence_benchmarks"
harness = false

[[bench]]
name = "xorshift_plus_benchmarks"
harness = false

[[bench]]
name = "xoshiro_ss_benchmarks"
harness = false
